Added authorization and user registration in our web application using spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+
+#Настройка базы данных postgresql
 spring.datasource.url=jdbc:postgresql://localhost/chatterapp
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.jpa.generate-ddl=true
+
+#Включить доп. аттрибуты для mustache
+spring.mustache.expose-request-attributes=true
