We changed the template engine from mustache to freemarker, because we don’t have enough mustache opportunities for further work. Removed the mapping "/filter" by moving the filter to "/main". Also there was a problem with the registration of the user, so far failed to solve.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.username=postgres
 spring.datasource.password=1
 spring.jpa.generate-ddl=true
 
-#¬ключить доп. аттрибуты дл€ mustache
-spring.mustache.expose-request-attributes=true
+#¬ключить доп. аттрибуты дл€ freemarker
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.settings.template_exception_handler=rethrow
