--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <version>2.1.3.RELEASE</version>
     </parent>
 
+    <!-- Зависимости Spring Boot -->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
