Added the ability to upload files (pictures) to the server and distribute static files.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.generate-ddl=true
 
 #Включить доп. аттрибуты для freemarker
 spring.freemarker.expose-request-attributes=true
+#Путь, куда будут загружаться файлы
+upload.path=C:/Users/Santa/IdeaProjects/chatterApp/uploads
