Added validation and password encryption

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=1
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
-
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #¬ключить доп. аттрибуты дл€ freemarker
 spring.freemarker.expose-request-attributes=true
