Added captcha when registering and remembering the user when logged in.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.freemarker.expose-request-attributes=true
 #Путь, куда будут загружаться файлы
 upload.path=C:/Users/Santa/IdeaProjects/chatterApp/uploads
+recaptcha.secret=6Lfy054UAAAAALcl3rHDLzimx_hbuQQTgEZg4oT0
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
