--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=${PORT:8080}
 
 #¬ключить доп. аттрибуты дл€ freemarker
 spring.freemarker.expose-request-attributes=true
